test: passing for integrating generator to tf Dataset API

--- a/object-detection/ssd-mobilenet/test/Tensorflow Data API with Generator.ipynb
+++ b/object-detection/ssd-mobilenet/test/Tensorflow Data API with Generator.ipynb
@@ -13,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -31,15 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.32036811 0.47135286]\n",
-      "[0.98425427 0.03165676]\n"
+      "[0.20376027 0.754099  ]\n",
+      "[0.80373979 0.86326871]\n"
      ]
     }
    ],
@@ -57,15 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([0.89832814, 0.47356569]), array([0.4379071])]\n",
-      "[array([0.30549606, 0.88996046]), array([0.14898714])]\n"
+      "[array([0.61026629, 0.60401201]), array([0.90194467])]\n",
+      "[array([0.5817122 , 0.65608193]), array([0.98804603])]\n"
      ]
     }
    ],
@@ -91,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.6066462 0.6232023]\n"
+      "[0.5424906  0.17251897]\n"
      ]
     }
    ],
@@ -122,14 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.22145846 0.09135913]\n"
+      "[0.7731478  0.81827503]\n"
      ]
     }
    ],
@@ -156,17 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "(3, 32, 32, 3) (3, 10)\n",
-      "(3, 32, 32, 3) (3, 10)\n",
-      "(3, 32, 32, 3) (3, 10)\n",
       "(3, 32, 32, 3) (3, 10)\n",
       "(3, 32, 32, 3) (3, 10)\n",
       "(3, 32, 32, 3) (3, 10)\n",
@@ -204,20 +198,172 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test train data generator with Dataset API"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "from data_gen import TrainingData   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = '../dataset/cone/train_dev'                                    \n",
+    "images_dir = os.path.join(data, 'Images')                          \n",
+    "labels_dir = os.path.join(data, 'Labels')                          \n",
+    "td = TrainingData(images_dir, labels_dir, None)                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tenzin/ML/project/sfd/Driverless-project-2/object-detection/ssd-mobilenet/test/ssdutils.py:154: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  return iarea / union\n",
+      "/home/tenzin/ML/project/sfd/Driverless-project-2/object-detection/ssd-mobilenet/test/ssdutils.py:159: RuntimeWarning: invalid value encountered in greater\n",
+      "  overlap = iou > threshold\n"
+     ]
+    }
+   ],
+   "source": [
+    "it = iter(td.train_generator(3))\n",
+    "sample = next(it)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3, 160, 160, 3), array([137., 140., 109.], dtype=float32))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# image data\n",
+    "sample[0].shape, sample[0][0][0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3, 8540, 7), array([0., 0., 1., 0., 0., 0., 0.], dtype=float32))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# label data\n",
+    "sample[1].shape, sample[1][0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tenzin/ML/project/sfd/Driverless-project-2/object-detection/ssd-mobilenet/test/ssdutils.py:154: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  return iarea / union\n",
+      "/home/tenzin/ML/project/sfd/Driverless-project-2/object-detection/ssd-mobilenet/test/ssdutils.py:159: RuntimeWarning: invalid value encountered in greater\n",
+      "  overlap = iou > threshold\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, array([1]))\n",
-      "(2, array([1, 1]))\n"
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (2, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n",
+      "(3, 160, 160, 3) (3, 8540, 7)\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "dataset = tf.data.Dataset().batch(3).from_generator(\n",
+    "    td.train_generator, \n",
+    "    (tf.float32, tf.int64)\n",
+    ")\n",
+    "\n",
+    "iterator = dataset.make_initializable_iterator()\n",
+    "image, label = iterator.get_next()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(iterator.initializer)\n",
+    "    for _ in range(100//3 + 1):\n",
+    "        try:\n",
+    "            print(sess.run(image).shape, sess.run(label).shape)\n",
+    "        except:\n",
+    "            sess.run(iterator.initializer)\n",
+    "            print(sess.run(image).shape, sess.run(label).shape)"
+   ]
   },
   {
    "cell_type": "code",
